<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.alexdl</groupId>
    <artifactId>shadow-engine</artifactId>
    <version>0.1-SNAPSHOT</version>
    <name>Shadow Engine</name>
    <url>https://github.com/moomba42/shadow-engine</url>

    <developers>
        <developer>
            <id>moomba42</id>
            <name>Aleksander Długosz</name>
            <email>olekdlugi@gmail.com</email>
            <organization>Aleksander Długosz</organization>
            <organizationUrl>https://alexdl.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <flatlaf.version>3.4</flatlaf.version>
        <joml.version>1.10.5</joml.version>
        <lwjgl.version>3.3.3</lwjgl.version>
        <lwjgl-awt.version>0.2.0</lwjgl-awt.version>
        <jsr305.version>3.0.2</jsr305.version>
    </properties>

    <profiles>
        <profile>
            <id>lwjgl-natives-macos-aarch64</id>
            <activation>
                <os>
                    <family>mac</family>
                    <arch>aarch64</arch>
                </os>
            </activation>
            <properties>
                <lwjgl.natives>natives-macos-arm64</lwjgl.natives>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-bom</artifactId>
                <version>${lwjgl.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Adds @Nullable and other useful annotations -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${jsr305.version}</version>
        </dependency>
        <!-- UI look & feel -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>${flatlaf.version}</version>
        </dependency>
        <!-- Maths -->
        <dependency>
            <groupId>org.joml</groupId>
            <artifactId>joml</artifactId>
            <version>${joml.version}</version>
        </dependency>
        <!-- AWT integration -->
        <dependency>
            <groupId>org.lwjglx</groupId>
            <artifactId>lwjgl3-awt</artifactId>
            <version>${lwjgl-awt.version}</version>
        </dependency>


        <!--    LWJGL    -->
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-vulkan</artifactId>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-glfw</artifactId>
        </dependency>

        <!--    Natives    -->
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl</artifactId>
            <classifier>${lwjgl.natives}</classifier>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-vulkan</artifactId>
            <classifier>${lwjgl.natives}</classifier>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-glfw</artifactId>
            <classifier>${lwjgl.natives}</classifier>
            <optional>true</optional>
        </dependency>
    </dependencies>
</project>
